--- a/assets/case-studies.html
+++ b/assets/case-studies.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
+    <!-- Slick css -->
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
 
     <!-- font-awesome.css -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -161,26 +164,40 @@
           <div class="container">
             <div class="inner-container">
               <div id="testimonials" class="clearfix"> 
-                <h3>what our clients say</h3>
-                <!-- flexslider -->
-                <div id="what_clients_say" class="flexslider">
-                  <ul class="slides">
-                    <li>
+                <h3 class="text-center">what our clients say</h3>
+                
+                <!-- testimonials -->
+                <div class="testimonials-area">
+                  <div class="testimonial">
+                    <div class="comment">
                       <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>
-                    </li>
-                    <li>
+                    </div><!-- /.comment -->
+                    <div class="client-info clearfix">
+                      <img src="img/ohio_state_university.png" alt="">
+                      <p>Pamela Groen, Laboratory Manager the Ohio State University, College of Medicine, Dept Of Pathology</p>
+                    </div><!-- /.client-info -->
+                  </div><!-- /.testimonial -->
+                  <div class="testimonial">
+                    <div class="comment">
+                      <span>&ldquo;</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  <span> &rdquo;</span>
+                    </div><!-- /.comment -->
+                    <div class="client-info clearfix">
+                      <img src="img/ohio_state_university.png" alt="">
+                      <p>Pamela Groen, Laboratory Manager the Ohio State University, College of Medicine, Dept Of Pathology</p>
+                    </div><!-- /.client-info -->
+                  </div><!-- /.testimonial -->
+                  <div class="testimonial">
+                    <div class="comment">
                       <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>
-                    </li>
-                    <li>
-                      <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>
-                    </li>    
-                  </ul>
-                </div><!-- /.flexslider -->   
+                    </div><!-- /.comment -->
+                    <div class="client-info clearfix">
+                      <img src="img/ohio_state_university.png" alt="">
+                      <p>Pamela Groen, Laboratory Manager the Ohio State University, College of Medicine, Dept Of Pathology</p>
+                    </div><!-- /.client-info -->
+                  </div><!-- /.testimonial -->
+                </div><!-- /.testimonials-area -->
+
               </div><!-- /#testimonials -->
-              <div class="ohio-state-university clearfix">
-                <img src="img/ohio_state_university.png" alt="">
-                <p>Pamela Groen, Laboratory Manager the Ohio State University, College of Medicine, Dept Of Pathology</p>
-              </div><!-- /.ohio-state-university -->
             </div><!-- /.inner-container -->
           </div><!-- /.container -->
         </div><!-- /.container-wrapper -->
@@ -288,45 +305,44 @@
 
     
       <!-- Contact -->
-      <div class="section-contact bg-blue">
+      <div class="padding-md-top-100 section-contact bg-blue">
         <div class="container">
           <div class="container-inner">
-            <h2 class="d-none d-sm-block">lorem ipsum dolar sit</h2>
-            <h2 class="d-block d-sm-none">LOOKING FOR NEXT GENERATION solutions?</h2>
-            <form action="#" name="contact_form">
-              <div class="d-none d-sm-block"> 
-                <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="f_name">First Name</label>
-                      <input type="text" class="form-control" id="f_name" placeholder="First Name">
-                    </div>    
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="l_name">Last Name</label>
-                      <input type="text" class="form-control" id="l_name" placeholder="Last Name">
-                    </div>   
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="email_address">Email Address</label>
-                      <input type="text" class="form-control" id="email_address" placeholder="Email Address">
-                    </div>    
-                  </div><!-- /.col-md-6 -->
-                  <div class="col-md-6">
-                    <div class="form-group">
-                      <label class="sr-only" for="phone">Phone Number</label>
-                      <input type="text" class="form-control" id="phone" placeholder="Phone Number">
-                    </div>   
-                  </div><!-- /.col-md-6 -->
-                 </div><!-- /.row -->
-               </div><!-- /.d-none /.d-sm-block -->
-               <div class="row">
-                <div class="col-md-12 text-center">
-                   <button type="submit" class="btn btn-success">contact us <i class="fas fa-angle-right"></i></button>
-                </div>
-              </div><!-- /.row -->
+            <h2 class="d-none d-md-block">lorem ipsum dolar sit</h2>
+            <h2 class="d-block d-md-none">LOOKING FOR NEXT GENERATION solutions?</h2>
+            <div class="text-center d-block d-md-none">
+              <a class="read-more-cta btn btn-success" href="#">contact us <i class="fas fa-angle-right"></i></a>
+            </div>
+            <form action="#" name="contact_form" class="d-none d-md-block">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="sr-only" for="f_name">First Name</label>
+                    <input type="text" class="form-control" id="f_name" placeholder="First Name">
+                  </div>    
+                </div><!-- /.col-md-6 -->
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="sr-only" for="l_name">Last Name</label>
+                    <input type="text" class="form-control" id="l_name" placeholder="Last Name">
+                  </div>   
+                </div><!-- /.col-md-6 -->
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="sr-only" for="email_address">Email Address</label>
+                    <input type="text" class="form-control" id="email_address" placeholder="Email Address">
+                  </div>    
+                </div><!-- /.col-md-6 -->
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="sr-only" for="phone">Phone Number</label>
+                    <input type="text" class="form-control" id="phone" placeholder="Phone Number">
+                  </div>   
+                </div><!-- /.col-md-6 -->
+               </div><!-- /.row -->
+              <div class="text-center">
+                 <button type="submit" class="btn btn-success">contact us <i class="fas fa-angle-right"></i></button>
+              </div>
             </form> 
           </div><!-- /.container-inner -->
         </div><!-- /.container -->
@@ -338,7 +354,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4 block-left">
-              <img src="img/footer_left_img.png" alt="" class="d-none d-sm-block img-fluid">
+              <img src="img/footer_left_img.png" alt="" class="d-none d-md-block img-fluid">
               <h3><a href="#">locate us lorem ipsum <img src="img/icon_gt.png" alt=""></a></h3>
             </div><!-- /.col-md-4 -->
             <div class="col-md-8">
@@ -382,14 +398,17 @@
       </footer><!-- /.site-footer -->
     </div><!-- /.page-wrapper -->
 
-    <!-- Optional JavaScript -->
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="js/jquery.flexslider-min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/custom.js"></script>
   </body>
 </html>
